<resources>
    <string name="app_name">App-Locker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="fb_client_token">56789</string>


    //for-drawer
    <array name="menuOptions">
        <item>News</item>
        <item>Feed</item>
        <item>Messages</item>
        <item>Music</item>
    </array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="vault">vault</string>
    <string name="block_list">block_list</string>
    <string name="search">Search</string>
    <string name="apps">Apps</string>
    <string name="blocklist">BlockList</string>
    <string name="appusage">AppUsage</string>
    <string name="welcome_to_applocker">Welcome To AppLocker!</string>
    <string name="keep_your_apps_safe">Keep Your Apps Safe!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_desc">If you dont have account click on:</string>
    <string name="signup">SignUp!</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_using_facebook">Login using Facebook</string>
    <string name="login_using_gmail">Login using Google</string>
    <string name="custom_login">Login with Email</string>
    <string name="install_app_name">App Name</string>
    <string name="app_package_name">App Package Name</string>
    <string name="blocked">Blocked</string>
    <string name="cr_username">Mayank</string>
    <string name="cr_userEmail">dummy@gmail.com</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="privacy">privacy and policy</string>
    <string name="terms">terms and conditions</string>
    <string name="logout">Logout</string>
    <string name="title">title</string>
    <string name="app_locker">App Locker</string>
    <string name="enter_your_6_digit_lock_pin_to">Enter your 6 digit lock PIN to</string>
    <string name="unlock">unlock</string>
    <string name="todays_s_appusage">Todays\'s Appusage</string>
    <string name="time">Time</string>
    <string name="home_frag">Home</string>
    <string name="accessibility_service_description">New Project App Locker uses Accessibility service to protect you from excessive apps usage.</string>
    <string name="chart">Chart</string>
    <string name="generate_pin">Generate Pin</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="reset_pin">Reset PIN</string>
    <string name="update_password">update-password</string>
    <string name="update">Update</string>
    <string name="reset">Reset PIN</string>
    <string name="welcome_to_app_locker">Welcome to App-Locker</string>
    <string name="current_password">current-password</string>
    <string name="change_password">Change Password</string>
    <string name="update_pass">Change Password</string>
    <string name="today">Today</string>
    <string name="seven_days">7 day\'s</string>
    <string name="month">Month</string>
    <string name="pin_and_biometric">Pin and Biometric</string>
    <string name="pin_biometric">Pin and Biometric</string>
    <string name="create_pin">Create PIN</string>
    <string name="on">On</string>
    <string name="set_biometric_verification">Set Biometric Verification</string>
    <string name="title_biometric_dialog">Biometrics</string>
    <string name="text_description_biometrics_dialog">Use biometrics to continue.</string>
    <string name="text_negative_button_biometric_dialog">Use other way</string>
    <string name="message_success">Success</string>
    <string name="message_no_support_biometrics">Device not support Biometrics</string>
    <string name="message_no_hardware_available">No Hardware available</string>

    <string name="error_hw_unavailable">The hardware is unavailable. Try again later.</string>
    <string name="error_unable_to_process">The sensor was unable to process the current image.</string>
    <string name="error_time_out">The current operation has been running too long and has timed out.</string>
    <string name="error_no_space">The operation can\'t be completed because there is not enough device storage remaining.</string>
    <string name="error_canceled">The operation was canceled by the user or because the biometric sensor is unavailable.</string>
    <string name="error_lockout">The operation was canceled because the biometrics is locked out due to too many attempts. This occurs after 5 failed attempts, and lasts for 30 seconds.</string>
    <string name="error_vendor">The operation failed due to a vendor-specific error.</string>
    <string name="error_lockout_permanent">Wrong biometrics too many times. Use device credential to unlock.</string>
    <string name="error_user_canceled">The user canceled the operation.</string>
    <string name="error_no_biometrics">The Device does not have any biometrics enrolled.</string>
    <string name="error_hw_not_present">The device does not have the required authentication hardware.</string>
    <string name="error_no_device_credentials">The device does not have pin, pattern, or password set up.</string>
    <string name="error_security_update_required">A security vulnerability has been discovered with one or more hardware sensors. The affected sensor(s) are unavailable until a security update has addressed the issue.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="message_user_app_authentication">Denied for Biometrics</string>
    <string name="text_unlock">Unlock</string>
    <string name="message_set_up_pattern">Set up PIN/Pattern/Password.</string>
    <string name="title_device_lock">Device Lock</string>
    <string name="title_set_up_device_lock">Set up Device lock.</string>
    <string name="statistics">Statistics</string>
    <string name="week1">week1</string>
    <string name="week2">week2</string>
    <string name="week4">week4</string>
    <string name="week3">week3</string>
    <string name="email_error_1">please enter valid email</string>
    <string name="password_error_1">please enter valid password</string>
    <string name="email_error_2">please re enter your email</string>
    <string name="password_error_2">length of password is minimum 8</string>
    <string name="home_title">Home</string>
    <string name="apps_title">Apps</string>


</resources>