<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragments.LockFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/profile_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="110.00dp"
                android:layout_height="110.00dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:elevation="5.00dp">

                <ImageView
                    android:id="@+id/profileImg"
                    android:layout_width="110.00dp"
                    android:layout_height="110.00dp"
                    android:layout_gravity="center"
                    android:src="@drawable/famicare_logo"
                    app:civ_border_color="@color/block_bg"
                    app:civ_border_width="1dp" />
            </FrameLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_ll">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:text="@string/app_locker"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_your_6_digit_lock_pin_to"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/unlock"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/lock_pinview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cursorVisible="false"
            app:forceKeyboard="false"
            app:textSize="5sp"
            app:inputType="number"
            android:singleLine="true"
            android:imeOptions="actionGo"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:password="false"
            app:pinBackground="@drawable/pinviewbackground"
            app:pinHeight="42dp"
            app:pinLength="6"
            app:pinWidth="42dp"
            />
        <TextView
            android:id="@+id/unlock"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:background="@drawable/btn_add_new_parent_bg"
            android:text="@string/unlock"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/lock_pinview" />




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>